# chatbot

./: Containerfile  Containerfile.api  Makefile  README.md  api-entrypoint.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docs-deploy.yml  docs-pr-check.yml  pdm-update.yml
docs/: api-quickstart.md  build.sh  requirements.txt
docs/source/: conf.py  index.rst  spelling_wordlist.txt
docs/source/Introduction/: 00-intro.md
docs/source/User/: 01-quickstart.md  02-env-variables.md
docs/source/UserManual/: 01-quickstart.md  01-user-manual.md
src/: app.py  chat.py  config.py  constants.py  embeddings.py  generation.py  prompt.py  utils.py  vectordb.py
src/db/: __init__.py  vectordb.py
src/handlers/: __init__.py  chat.py  feedback.py
src/llm/: __init__.py  embeddings.py
src/rca_accelerator_chatbot/: api.py  app.py  auth.py  chat.py  config.py  embeddings.py  generation.py  main.py  prompt.py  vectordb.py
src/rca_accelerator_chatbot/models/: __init__.py  embeddings.py  generative.py  model.py  rerank.py
