[project]
name = "rca-accelerator-chatbot"
version = "0.1.0"
description = "Useful chatbot that can be used to do RCA of CI errors."
readme = "README.md"
authors = []
dependencies = [
    "openai==1.68.2",
    "chainlit>=2.5.5",
    "qdrant-client==1.13.3",
    "asyncpg>=0.30.0",
    "bcrypt==4.3.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.28.1",
    "httpx-gssapi>=0.4",
    "gssapi>=1.9.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "beautifulsoup4>=4.13.4",
]
requires-python = "==3.12.*"
license = "Apache-2.0"

[tool.pdm.dev-dependencies]
dev = [
    "tox==4.25.0",
    "pylint==3.0.0",
    "fastapi==0.115.8",
    "ruff==0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rca_accelerator_chatbot = ["data/**", "data/.chainlit/**"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rca_accelerator_chatbot = "rca_accelerator_chatbot.main:main"
